--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "musciplayer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://fab-c14.github.io/musciplayer",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -11,6 +12,7 @@
     "react-player": "^2.14.1",
     "react-scripts": "5.0.1",
     "tachyons": "^4.12.0",
+    "gh-pages":"^2.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -18,6 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
